--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "b665f08f-efd0-4189-9ded-1cf7be6584f7"
   },
   "newProjectRoot": "projects",
   "projects": {
